creo que termiando

--- a/ProyectoApi/src/main/resources/application.properties
+++ b/ProyectoApi/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mariadb://74.226.196.212:3306/ProyectoDWS1
 spring.datasource.username=grupoJ
 spring.datasource.password=BaseDeDatosDelGrupoJ
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true 
